Fix some issues with overflow on different-sized screens

--- a/ui/core/components/_gear_picker.scss
+++ b/ui/core/components/_gear_picker.scss
@@ -38,8 +38,7 @@
 
 .item-picker-gem-icon {
   @include wowhead-background-icon;
-  width: 18px;
-  height: 18px;
+  width: 28%;
   margin: 1px;
 }
 
